--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Bio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="bio.css" />
   </head>
@@ -18,10 +18,11 @@
             </div>
           </div>
           <div class="tab-bar">
-            <a href="/index.html" class="bio tab">Home</a>
+            <a href="/index.html" class="tab">Home</a>
             <a href="/projects.html" class="tab">Projects</a>
-            <a href="/games.html" class="games-tab tab">Games</a>
-            <a href="/references.html" class="references tab">References</a>
+            <a href="/bio.html" class="tab active">Bio</a>
+            <a href="/games.html" class="tab">Games</a>
+            <a href="/references.html" class="tab">References</a>
           </div>
         </div>
         <div class="content">
